changed classes names

--- a/index.html
+++ b/index.html
@@ -13,36 +13,40 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <main class="container">
-      <section class="image-container">
+    <main class="nft-card">
+      <div class="nft-image-cont">
         <img
           class="image-equilibrium"
           src="images/image-equilibrium.jpg"
           alt=""
         />
-      </section>
-      <section class="explanations-container">
-        <p class="first-p">Equilibrium #3429</p>
-        <p class="second-p">
+      </div>
+      <div class="nft-content">
+        <p class="nft-title">Equilibrium #3429</p>
+        <p class="nft-description">
           Our Equilibrium collection promotes balance and calm.
         </p>
-        <div class="time-container">
-          <div class="mini-time">
+        <div class="nft-info">
+          <div class="nft-price">
             <img class="icon-ethereum" src="images/icon-ethereum.svg" alt="" />
             <p>0.041ETH</p>
           </div>
-          <div class="mini-time-2">
+          <div class="nft-time">
             <img class="icon-clock" src="images/icon-clock.svg" alt="" />
             <p>3 days left</p>
           </div>
         </div>
-      </section>
+      </div>
       <hr />
       <div class="last-div">
         <div class="profile-cont">
-          <img src="" alt="" />
+          <img class="profile-pic" src="images/profile-pic.jpg" alt="" />
         </div>
-        <div class="profile-name-cont">mimi</div>
+        <div class="creator-info">
+          <p class="creator-text">
+            Creation of <span class="creator-name">Jules Wyvern</span>
+          </p>
+        </div>
       </div>
     </main>
   </body>
