--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <hr />
       <div class="last-div">
         <div class="profile-cont">
-          <img class="profile-pic" src="images/profile-pic.jpg" alt="" />
+          <img class="profile-pic" src="images/image-avatar.png" alt="" />
         </div>
         <div class="creator-info">
           <p class="creator-text">
